--- a/level_2/anime/anime.css
+++ b/level_2/anime/anime.css
@@ -82,7 +82,7 @@ h3{
     font-weight: 100;
     margin-left: 20%;
     margin-top: 50px;
-    color: #d1694c;
+    color: #c3d5ff;
 }
 h6{
     font-family: HelveticaNeue-L;
